--- a/css/contact.css
+++ b/css/contact.css
@@ -176,6 +176,7 @@ form>div {
   padding: 2px 14px;
   border-radius: 20px;
   background-color: #fff;
+  font-weight: 500;
   color: #000;
   border: 1px solid #000;
   cursor: pointer;
@@ -195,9 +196,11 @@ form>div {
 
 /* Hover effect */
 .form-group label:hover {
-  background-color: #000;
+  background-color: var(--orange);
   color: #fff;
+  border: none;
 }
+
 
 /* Active state */
 .form-group input[type="radio"]:checked+label {
