--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,9 @@ a {
   color: var(--maroon);
 }
 
+.mil-light-dark {
+  color: rgba(0, 0, 0, 0.5);
+}
 
 .mil-light-soft {
   color: rgba(255, 255, 255, 0.4);
@@ -735,6 +738,7 @@ button
 }
 
 .mil-button span {
+  color: white;
   white-space: nowrap;
 }
 
@@ -744,7 +748,7 @@ button
   width: 40px;
   height: 40px;
   padding: 5px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(253, 250, 250);
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
 }
@@ -1083,6 +1087,10 @@ spaces
   padding-bottom: 90px;
 }
 
+#partners-section {
+  padding: 4em 0;
+}
+
 @media screen and (max-width: 992px) {
   .mil-p-120-90 {
     padding-top: 90px;
@@ -1410,7 +1418,7 @@ frame
 .mil-frame {
   padding: 50px 60px 60px 60px;
   position: fixed;
-  z-index: 2;
+  z-index: 999;
   pointer-events: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2736,7 +2744,7 @@ services
 }
 
 .mil-service-card-sm p {
-  opacity: 0;
+  /* opacity: 0; */
   -webkit-transform: translateY(10px);
   transform: translateY(10px);
   overflow: hidden;
@@ -2744,8 +2752,8 @@ services
   -webkit-line-clamp: 3;
   line-clamp: 3;
   -webkit-box-orient: vertical;
-  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
-  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  /* -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1); */
+  /* transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);/ */
 }
 
 .mil-service-card-sm .mil-button {
@@ -3225,8 +3233,8 @@ revievs
 .mil-slider-nav .mil-slider-arrow {
   width: 40px;
   height: 40px;
-  padding: 10px;
-  background-color: rgb(0, 0, 0);
+  padding: 5px;
+  background-color: white;
   border-radius: 50%;
   cursor: pointer;
   -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
@@ -3234,7 +3242,7 @@ revievs
 }
 
 .mil-slider-nav .mil-slider-arrow svg path {
-  fill: rgb(255, 152, 0);
+  fill: orange;
 }
 
 .mil-slider-nav .mil-slider-arrow.mil-prev {
@@ -3764,7 +3772,6 @@ portfolio
 }
 
 .mil-portfolio-nav {
-  margin-bottom: 26px;
   background-color: rgb(242, 242, 242);
   width: 100%;
   padding: 0 60px;
@@ -3795,7 +3802,8 @@ portfolio
   padding: 0 15px;
   height: 70px;
   border-radius: 70px;
-  background-color: rgb(255, 255, 255);
+  color: white;
+  background-color: var(--orange);
 }
 
 @media screen and (max-width: 992px) {
@@ -5003,7 +5011,7 @@ video {
 /* featured products */
 
 #container-fp {
-  background-color: rgb(248 156 31);
+  /* background-color: rgb(248 156 31); */
   /* Set the background color of the outer container */
   min-height: 100vh;
   width: 100%;
@@ -5019,7 +5027,7 @@ video {
 #container-fp .primary-heading-box {
   margin: 1em;
   padding: 1em 0;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
 }
 
 #container-fp .primary-heading-box h1 {
@@ -5191,18 +5199,22 @@ video {
   .counter-box {
     padding: 15px;
   }
+
   .counter-box i {
     font-size: 20px;
     margin-bottom: 8px;
   }
+
   .counter-box p {
     font-size: 16px;
     margin-bottom: 8px;
   }
+
   .counter {
     font-size: 28px;
   }
-  .video-container{
+
+  .video-container {
     padding-top: 20%;
   }
 }
@@ -5211,22 +5223,27 @@ video {
   .counter-section {
     padding: 100px 0;
   }
+
   .counter-box {
     padding: 10px;
     margin-bottom: 6px;
   }
+
   .counter-box i {
     font-size: 18px;
     margin-bottom: 8px;
   }
+
   .counter-box p {
     font-size: 14px;
     margin-bottom: 6px;
   }
+
   .counter {
     font-size: 24px;
   }
-  .video-container{
+
+  .video-container {
     padding-top: 20%;
   }
 }
@@ -5337,7 +5354,7 @@ video {
 }
 
 .section {
- padding: 0 20px;
+  padding: 0 20px;
 }
 
 
@@ -5354,7 +5371,7 @@ ul {
   padding: 0;
 }
 
-.section-heading-box{
+.section-heading-box {
   margin-bottom: 2.8rem;
 }
 
@@ -5597,7 +5614,8 @@ ul {
 .image-container2:hover img {
   transform: scale(1.1);
 }
-#hoverable-img{
+
+#hoverable-img {
   height: 60vh;
 }
 
@@ -5703,11 +5721,11 @@ ul {
 }
 
 .animated-button svg {
-    position: absolute;
-    width: 24px;
-    fill: #fbae19;
-    z-index: 9;
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  position: absolute;
+  width: 24px;
+  fill: #fbae19;
+  z-index: 9;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 .animated-button .arr-1 {
@@ -5808,7 +5826,8 @@ ul {
   .image-container2 img {
     height: 50vh;
   }
-  #hoverable-img{
+
+  #hoverable-img {
     height: auto;
   }
 }
@@ -5825,7 +5844,8 @@ ul {
   .image-container2 img {
     height: 40vh;
   }
-  #hoverable-img{
+
+  #hoverable-img {
     height: auto;
   }
 }
@@ -5885,7 +5905,8 @@ ul {
   .box2 h4 {
     text-align: left;
   }
-  #hoverable-img{
+
+  #hoverable-img {
     height: auto;
   }
 }
@@ -5910,7 +5931,8 @@ ul {
   .container2 {
     align-items: center;
   }
-  #hoverable-img{
+
+  #hoverable-img {
     height: auto;
   }
 }
@@ -5951,7 +5973,8 @@ ul {
   .buttons {
     text-align: center;
   }
-  #hoverable-img{
+
+  #hoverable-img {
     height: auto;
   }
 }
@@ -6113,11 +6136,8 @@ ul {
 /* screen problem css */
 
 @media screen and (max-width: 1366px) and (max-height: 768px) {
-  .mil-circle-text {
-    display: none;
+  .mil-banner .mil-banner-content {
+    padding-top: 20vh;
   }
 
-  .mil-button {
-    display: none;
-  }
 }
