--- a/css/contact.css
+++ b/css/contact.css
@@ -204,8 +204,9 @@ form>div {
 
 /* Active state */
 .form-group input[type="radio"]:checked+label {
-  background-color: #000;
+  background-color: var(--orange);
   color: #fff;
+  border: none;
 }
 
 /* Gap between buttons */
