--- a/css/style.css
+++ b/css/style.css
@@ -6332,7 +6332,8 @@ ul {
   flex-direction: row;
   border-radius: 5px;
   margin: 0 auto;
-  background-color: #edece8;
+  /* background-color: #edece8; */
+  background-color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   width: 100%;
@@ -6460,3 +6461,73 @@ ul {
       height: 40vh;
   }
 }
+
+/* vertical image */
+.container5 {
+  display: flex;
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  height: 100vh;
+}
+
+.box5 {
+  flex: 1;
+  overflow: hidden;
+  transition: 0.8s;
+  margin: 0 2%;
+  box-shadow: 0 20px 30px rgba(0,0,0,.2);
+  line-height: 0;
+}
+
+.box5 > img {
+  width: 200%;
+  height: calc(100% - 10vh);
+  object-fit: cover; 
+  transition: .5s;
+}
+
+.box5 > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
+}
+
+.box5:hover { flex: 1 1 50%; }
+.box5:hover > img {
+  width: 100%;
+  height: 100%;
+}
+/* Responsive Styles */
+@media (max-width: 1200px) {
+  .box5 {
+    flex: 1 1 calc(33.33% - 4%);
+  }
+}
+
+@media (max-width: 900px) {
+  .box5 {
+    flex: 1 1 calc(50% - 4%);
+  }
+}
+
+@media (max-width: 600px) {
+  .container5 {
+    flex-direction: column;
+    align-items: center;
+  }
+  .box5 {
+    flex: 1 1 100%;
+    margin: 2% 0;
+  }
+  .box5 > img {
+    width: 100%;
+    height: auto;
+  }
+  .box5:hover {
+    flex: 1 1 100%;
+  }
+}
+ 
