--- a/css/style.css
+++ b/css/style.css
@@ -2819,9 +2819,9 @@
    border-bottom: solid 2px #bcb6b6
  }
  
- .mil-services-grid .mil-services-grid-item:first-child {
-   /* border-left: solid 2px #bcb6b6; */
- }
+ /* .mil-services-grid .mil-services-grid-item:first-child {
+    border-left: solid 2px #bcb6b6; 
+ } */
  
  @media screen and (max-width: 992px) {
    .mil-services-grid {
@@ -5132,6 +5132,8 @@
    padding: 250px 0;
    height: 65.875vh;
  }
+
+
  
  
  .bg-image-container {
@@ -5194,6 +5196,89 @@
    background-color: #f2f2f2;
    cursor: pointer;
  }
+
+ /* counter */
+
+ .montserrat-counter-section {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#container-2 {
+  width: 100%;
+  height: 70.875vh;
+  background-color: rgb(19 23 26);
+  color: white;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 1em;
+  background: url("../img/photo/ricardo-gomez-angel-YtbasgItwyo-unsplash.jpg")no-repeat center center / cover;
+}
+
+.container-2-boxes {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  height: 20%;
+  width: 80%;
+}
+
+.box {
+  position: relative;
+  backdrop-filter: blur(5px);
+  background-color: rgba(248, 248, 245, .8);
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  display: flex;
+  justify-content: space-between;
+  color: black;
+  overflow: hidden;
+}
+
+.box::before {
+  content: '';
+  position: fixed;
+  top: 50%;
+  /* Align the top of the pseudo-element with the middle of the box */
+  left: 3%;
+  /* Align the right edge of the pseudo-element with the right edge of the box */
+  transform: translateY(-50%);
+  /* Adjust to vertically center the pseudo-element */
+  width: 50px;
+  /* Adjust the width of the background image */
+  height: 50px;
+  /* Adjust the height of the background image */
+  background-size: cover;
+  z-index: -1;
+}
+
+
+#box-1::before {
+  background: url("../img/icons/groups_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
+}
+
+#box-2::before {
+  background: url("../img/icons/account_tree_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
+}
+
+#box-3::before {
+  background: url("../img/icons/trophy_24dp_FILL0_wght400_GRAD0_opsz24.svg") no-repeat center center;
+}
+
+.box .counter {
+  font-weight: 400;
+  font-size: 1.8rem;
+  position: relative;
+  z-index: 1;
+}
+
+.box .heading {
+  align-self: flex-end;
+}
  
  @media (max-width: 768px) {
    .counter-box {
@@ -6508,7 +6593,6 @@
 .box5:hover > video {
   width: 100%;
   height: 100%;
-  play();
 }
 
 /* Responsive Styles */
